--- a/question_generator_block/static/html/problem_edit.html
+++ b/question_generator_block/static/html/problem_edit.html
@@ -92,7 +92,7 @@
     <div class="wrapper-comp-settings is-active editor-with-buttons general_information" name="general_information-tab" id="settings-tab">
 		<ul class="list-input settings-list">
 			{% for field in fields %}
-				{% if field.name != "_image_url" and field.name != "_resolver_selection" and field.name != "_question_template" and field.name != "_answer_template" and field.name != "_variables" and	field.name != "_raw_editor_xml_data" and field.name != "_answer_template_string"%}
+				{% if field.name != "_image_url" and field.name != "_question_template" and field.name != "_answer_template" and field.name != "_variables" and	field.name != "_raw_editor_xml_data" and field.name != "_answer_template_string"%}
 					<li
 					  class="field comp-setting-entry metadata_entry {% if field.is_set %}is-set{% endif %}"
 					  data-field-name="{{field.name}}"
